syntax = "proto3";

package com.example.internal.input.reqreply.device;

import "com/example/commonmodels/device/device.proto";
import "com/example/commonmodels/error.proto";

option java_multiple_files = true;
option java_package = "com.example.internal.input.reqreply.device.get_by_user_id.proto";

message GetDevicesByUserIdRequest {
  string user_id = 1;
}

message GetDevicesByUserIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonmodels.device.Device devices = 1;
  }

  message Failure {
    string message = 100;
    oneof error {
      commonmodels.Error user_not_found = 1;
    }
  }
}
